--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ body {
     font-size: large;
     padding: 2em;
 }
+.signature{
+    color: #F5F5DC;
+    font-weight: bold;
+    font-size: large;
+}
 .grille {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
